Исправления под HTML5

--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -5,36 +5,37 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="header">
+    <header>
         <h1>Интернет магазин "Не только красивое"</h1>
-    </div>
+    </header>
 
-    <div class="main-content">
-    <div class="sidebar">
+    <main>
+        <aside>
         <h2>Морская рыба</h2>
-
-        <div class="checkbox">
-        <p><input type="checkbox">Акула</p>
-        <p><input type="checkbox">Окунь</p>
-        <p><input type="checkbox">Палтус</p>
-        <p><input type="checkbox">Треска</p>
-        </div>
+        <ul>
+            <li><input type="checkbox">Акула</li>
+            <li><input type="checkbox">Окунь</li>
+            <li><input type="checkbox">Палтус</li>
+            <li><input type="checkbox">Треска</li>
+        </ul>
 
         <h2>Пресноводная рыба</h2>
-        <div class="checkbox">
-        <p><input type="checkbox">Белоглазка</p>
-        <p><input type="checkbox">Осётр</p>
-        <p><input type="checkbox">Речной угорь</p>
-        <p><input type="checkbox">Налим</p>
-        </div>
-    </div>
+        <ul>
+            <li><input type="checkbox">Белоглазка</li>
+            <li><input type="checkbox">Осётр</li>
+            <li><input type="checkbox">Речной угорь</li>
+            <li><input type="checkbox">Налим</li>
+        </ul>
+    </aside>
 
-    <div class="content">
-        <div class="content_top">
-        <h1>Рыбы на любой вкус</h1>
-        <span>Мы продаём рыбов, а не только показываем</span>
-        </div>
-        <div class="urls">
+        <article>
+
+            <hgroup>
+                <h1>Рыбы на любой вкус</h1>
+                <span>Мы продаём рыбов, а не только показываем</span>
+        </hgroup>
+
+            <section>
 
             <div class="urls_block">
                 <a href="#">Замороженные рыбы</a>
@@ -46,86 +47,86 @@
                 <span>На кухню или на разведение</span>
             </div>
 
-        </div>
+            </section>
 
-        <div class="popular">
+            <div class="popular">
             <h1>Популярные</h1>
-        <div class="buy">
-            <div class="item">
-                <div class="img"></div>
+                    <section>
+                        <div class="item">
+                            <div class="img"></div>
 
-                <div class="button_area">
-                <a href="#">Палтус</a>
-                <button class="button">Купить</button>
-                </div>
+                            <div class="button_area">
+                            <a href="#">Палтус</a>
+                            <button class="button">Купить</button>
+                            </div>
 
+                        </div>
+
+                        <div class="item">
+
+                            <div class="img"></div>
+
+                            <div class="button_area">
+                                <a href="#">Сёмга</a>
+                                <button class="button">Купить</button>
+                            </div>
+
+                        </div>
+
+                        <div class="item">
+
+                            <div class="img"></div>
+
+                            <div class="button_area">
+                                <a href="#">Сом</a>
+                                <button class="button">Купить</button>
+                            </div>
+
+                        </div>
+
+                        <div class="item">
+
+                            <div class="img"></div>
+
+                            <div class="button_area">
+                                <a href="#">Сельдь</a>
+                                <button class="button">Купить</button>
+                            </div>
+
+                        </div>
+
+                        <div class="item">
+
+                            <div class="img"></div>
+
+                            <div class="button_area">
+                                <a href="#">Мойва</a>
+                                <button class="button">Купить</button>
+                            </div>
+
+                        </div>
+
+                        <div class="item">
+
+                            <div class="img"></div>
+
+                            <div class="button_area">
+                                <a href="#">Тунец</a>
+                                <button class="button">Купить</button>
+                            </div>
+
+                        </div>
+
+                    </section>
             </div>
 
-            <div class="item">
+        </article>
+    </main>
 
-                <div class="img"></div>
-
-                <div class="button_area">
-                    <a href="#">Сёмга</a>
-                    <button class="button">Купить</button>
-                </div>
-
-            </div>
-
-            <div class="item">
-
-                <div class="img"></div>
-
-                <div class="button_area">
-                    <a href="#">Сом</a>
-                    <button class="button">Купить</button>
-                </div>
-
-            </div>
-
-            <div class="item">
-
-                <div class="img"></div>
-
-                <div class="button_area">
-                    <a href="#">Сельдь</a>
-                    <button class="button">Купить</button>
-                </div>
-
-            </div>
-
-            <div class="item">
-
-                <div class="img"></div>
-
-                <div class="button_area">
-                    <a href="#">Мойва</a>
-                    <button class="button">Купить</button>
-                </div>
-
-            </div>
-
-            <div class="item">
-
-                <div class="img"></div>
-
-                <div class="button_area">
-                    <a href="#">Тунец</a>
-                    <button class="button">Купить</button>
-                </div>
-
-            </div>
-
-        </div>
-        </div>
-    </div>
-
-    </div>
-
-    <div class="footer">
+    <footer>
         <span>Контакты</span>
         <span>© 2021 Рыбов О.А.</span>
-    </div>
+    </footer>
 
 </body>
 </html>
