Исправления под HTML5

--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -28,31 +28,33 @@
         </ul>
     </aside>
 
-        <article>
+        <section>
 
             <hgroup>
                 <h1>Рыбы на любой вкус</h1>
                 <span>Мы продаём рыбов, а не только показываем</span>
         </hgroup>
 
-            <section>
+            <article>
 
-            <div class="urls_block">
-                <a href="#">Замороженные рыбы</a>
-                <span>Мы заморозили рыбов для Вас</span>
-            </div>
+                <div class="article__urls">
+                    <a href="#">Замороженные рыбы</a>
+                    <span>Мы заморозили рыбов для Вас</span>
+                </div>
 
-            <div class="urls_block">
-                <a href="#">Живые рыбы</a>
-                <span>На кухню или на разведение</span>
-            </div>
+                <div class="article__urls">
+                    <a href="#">Живые рыбы</a>
+                    <span>На кухню или на разведение</span>
+                </div>
 
-            </section>
+            </article>
 
-            <div class="popular">
+            <div class="popular-items">
+
             <h1>Популярные</h1>
-                    <section>
-                        <div class="item">
+
+                    <article>
+                        <div class="popular-items__item">
                             <div class="img"></div>
 
                             <div class="button_area">
@@ -62,7 +64,7 @@
 
                         </div>
 
-                        <div class="item">
+                        <div class="popular-items__item">
 
                             <div class="img"></div>
 
@@ -73,7 +75,7 @@
 
                         </div>
 
-                        <div class="item">
+                        <div class="popular-items__item">
 
                             <div class="img"></div>
 
@@ -84,7 +86,7 @@
 
                         </div>
 
-                        <div class="item">
+                        <div class="popular-items__item">
 
                             <div class="img"></div>
 
@@ -95,7 +97,7 @@
 
                         </div>
 
-                        <div class="item">
+                        <div class="popular-items__item">
 
                             <div class="img"></div>
 
@@ -106,7 +108,7 @@
 
                         </div>
 
-                        <div class="item">
+                        <div class="popular-items__item">
 
                             <div class="img"></div>
 
@@ -117,10 +119,10 @@
 
                         </div>
 
-                    </section>
+                    </article>
             </div>
 
-        </article>
+        </section>
     </main>
 
     <footer>
