--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Интернет магазин "Не только красивое"</h1>
-    </header>
+<header>
+    <h1>Интернет магазин "Не только красивое"</h1>
+</header>
 
-    <main>
-        <aside>
+<main>
+    <aside>
         <h2>Морская рыба</h2>
         <ul>
             <li><input type="checkbox">Акула</li>
@@ -28,107 +29,107 @@
         </ul>
     </aside>
 
-        <section>
+    <section>
 
-            <hgroup>
-                <h1>Рыбы на любой вкус</h1>
-                <span>Мы продаём рыбов, а не только показываем</span>
+        <hgroup>
+            <h1>Рыбы на любой вкус</h1>
+            <span>Мы продаём рыбов, а не только показываем</span>
         </hgroup>
 
-            <article>
+        <article>
 
-                <div class="article__urls">
-                    <a href="#">Замороженные рыбы</a>
-                    <span>Мы заморозили рыбов для Вас</span>
-                </div>
+            <div class="article__urls">
+                <a href="#">Замороженные рыбы</a>
+                <span>Мы заморозили рыбов для Вас</span>
+            </div>
 
-                <div class="article__urls">
-                    <a href="#">Живые рыбы</a>
-                    <span>На кухню или на разведение</span>
-                </div>
+            <div class="article__urls">
+                <a href="#">Живые рыбы</a>
+                <span>На кухню или на разведение</span>
+            </div>
 
-            </article>
+        </article>
 
-            <div class="popular-items">
+        <div class="popular-items">
 
             <h1>Популярные</h1>
 
-                    <article>
-                        <div class="popular-items__item">
-                            <div class="img"></div>
+            <div class="container">
+                <div class="grid">
+                    <div class="img"></div>
 
-                            <div class="button_area">
-                            <a href="#">Палтус</a>
-                            <button class="button">Купить</button>
-                            </div>
+                    <div class="button_area">
+                        <a href="#">Палтус</a>
+                        <button class="button">Купить</button>
+                    </div>
 
-                        </div>
+                </div>
 
-                        <div class="popular-items__item">
+                <div class="grid">
 
-                            <div class="img"></div>
+                    <div class="img"></div>
 
-                            <div class="button_area">
-                                <a href="#">Сёмга</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <div class="button_area">
+                        <a href="#">Сёмга</a>
+                        <button class="button">Купить</button>
+                    </div>
 
-                        </div>
+                </div>
 
-                        <div class="popular-items__item">
+                <div class="grid">
 
-                            <div class="img"></div>
+                    <div class="img"></div>
 
-                            <div class="button_area">
-                                <a href="#">Сом</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <div class="button_area">
+                        <a href="#">Сом</a>
+                        <button class="button">Купить</button>
+                    </div>
 
-                        </div>
+                </div>
 
-                        <div class="popular-items__item">
+                <div class="grid">
 
-                            <div class="img"></div>
+                    <div class="img"></div>
 
-                            <div class="button_area">
-                                <a href="#">Сельдь</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <div class="button_area">
+                        <a href="#">Сельдь</a>
+                        <button class="button">Купить</button>
+                    </div>
 
-                        </div>
+                </div>
 
-                        <div class="popular-items__item">
+                <div class="grid">
 
-                            <div class="img"></div>
+                    <div class="img"></div>
 
-                            <div class="button_area">
-                                <a href="#">Мойва</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <div class="button_area">
+                        <a href="#">Мойва</a>
+                        <button class="button">Купить</button>
+                    </div>
 
-                        </div>
+                </div>
 
-                        <div class="popular-items__item">
+                <div class="grid">
 
-                            <div class="img"></div>
+                    <div class="img"></div>
 
-                            <div class="button_area">
-                                <a href="#">Тунец</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <div class="button_area">
+                        <a href="#">Тунец</a>
+                        <button class="button">Купить</button>
+                    </div>
 
-                        </div>
+                </div>
 
-                    </article>
             </div>
+        </div>
 
-        </section>
-    </main>
+    </section>
+</main>
 
-    <footer>
-        <span>Контакты</span>
-        <span>© 2021 Рыбов О.А.</span>
-    </footer>
+<footer>
+    <span>Контакты</span>
+    <span>© 2021 Рыбов О.А.</span>
+</footer>
 
 </body>
 </html>
