--- a/homework_2/index-dark.html
+++ b/homework_2/index-dark.html
@@ -54,8 +54,8 @@
 
             <h1>Популярные</h1>
 
-                    <article>
-                        <div class="popular-items__item">
+                    <div class="container">
+                        <div class="grid">
                             <div class="img"></div>
 
                             <div class="button_area">
@@ -65,7 +65,7 @@
 
                         </div>
 
-                        <div class="popular-items__item">
+                        <div class="grid">
 
                             <div class="img"></div>
 
@@ -76,7 +76,7 @@
 
                         </div>
 
-                        <div class="popular-items__item">
+                        <div class="grid">
 
                             <div class="img"></div>
 
@@ -87,7 +87,7 @@
 
                         </div>
 
-                        <div class="popular-items__item">
+                        <div class="grid">
 
                             <div class="img"></div>
 
@@ -98,7 +98,7 @@
 
                         </div>
 
-                        <div class="popular-items__item">
+                        <div class="grid">
 
                             <div class="img"></div>
 
@@ -109,7 +109,7 @@
 
                         </div>
 
-                        <div class="popular-items__item">
+                        <div class="grid">
 
                             <div class="img"></div>
 
@@ -120,7 +120,7 @@
 
                         </div>
 
-                    </article>
+                    </div>
             </div>
 
         </section>
