--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -10,121 +10,121 @@
     <h1>Интернет магазин "Не только красивое"</h1>
 </header>
 
+<section class="main-container">
+
+<aside>
+    <h2>Морская рыба</h2>
+    <ul>
+        <li><input type="checkbox">Акула</li>
+        <li><input type="checkbox">Окунь</li>
+        <li><input type="checkbox">Палтус</li>
+        <li><input type="checkbox">Треска</li>
+    </ul>
+
+    <h2>Пресноводная рыба</h2>
+    <ul>
+        <li><input type="checkbox">Белоглазка</li>
+        <li><input type="checkbox">Осётр</li>
+        <li><input type="checkbox">Речной угорь</li>
+        <li><input type="checkbox">Налим</li>
+    </ul>
+</aside>
+
 <main>
-    <aside>
-        <h2>Морская рыба</h2>
-        <ul>
-            <li><input type="checkbox">Акула</li>
-            <li><input type="checkbox">Окунь</li>
-            <li><input type="checkbox">Палтус</li>
-            <li><input type="checkbox">Треска</li>
-        </ul>
-
-        <h2>Пресноводная рыба</h2>
-        <ul>
-            <li><input type="checkbox">Белоглазка</li>
-            <li><input type="checkbox">Осётр</li>
-            <li><input type="checkbox">Речной угорь</li>
-            <li><input type="checkbox">Налим</li>
-        </ul>
-    </aside>
-
-    <section>
-
         <hgroup>
             <h1>Рыбы на любой вкус</h1>
-            <span>Мы продаём рыбов, а не только показываем</span>
+            <p>Мы продаём рыбов, а не только показываем</p>
         </hgroup>
 
-        <article>
+        <section class="fishes">
 
-            <div class="article__urls">
+            <article class="fishes__urls">
                 <a href="#">Замороженные рыбы</a>
                 <span>Мы заморозили рыбов для Вас</span>
-            </div>
+            </article>
 
-            <div class="article__urls">
+            <article class="fishes__urls">
                 <a href="#">Живые рыбы</a>
                 <span>На кухню или на разведение</span>
-            </div>
+            </article>
 
-        </article>
+        </section>
 
-        <div class="popular-items">
+        <section class="popular-items">
 
             <h1>Популярные</h1>
 
-            <div class="container">
-                <div class="grid">
-                    <div class="img"></div>
+            <article class="popular-items__grid-container">
+                <article class="popular-items__grid">
+                    <picture class="popular-items__img"></picture>
 
-                    <div class="button_area">
+                    <article class="popular-items__button-area">
                         <a href="#">Палтус</a>
-                        <button class="button">Купить</button>
-                    </div>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                </div>
+                </article>
 
-                <div class="grid">
+                <article class="popular-items__grid">
 
-                    <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                    <div class="button_area">
+                    <article class="popular-items__button-area">
                         <a href="#">Сёмга</a>
-                        <button class="button">Купить</button>
-                    </div>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                </div>
+                </article>
 
-                <div class="grid">
+                <article class="popular-items__grid">
 
-                    <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                    <div class="button_area">
+                    <article class="popular-items__button-area">
                         <a href="#">Сом</a>
-                        <button class="button">Купить</button>
-                    </div>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                </div>
+                </article>
 
-                <div class="grid">
+                <article class="popular-items__grid">
 
-                    <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                    <div class="button_area">
+                    <article class="popular-items__button-area">
                         <a href="#">Сельдь</a>
-                        <button class="button">Купить</button>
-                    </div>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                </div>
+                </article>
 
-                <div class="grid">
+                <article class="popular-items__grid">
 
-                    <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                    <div class="button_area">
+                    <article class="popular-items__button-area">
                         <a href="#">Мойва</a>
-                        <button class="button">Купить</button>
-                    </div>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                </div>
+                </article>
 
-                <div class="grid">
+                <article class="popular-items__grid">
 
-                    <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                    <div class="button_area">
+                    <article class="popular-items__button-area">
                         <a href="#">Тунец</a>
-                        <button class="button">Купить</button>
-                    </div>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                </div>
+                </article>
 
-            </div>
-        </div>
-
-    </section>
+            </article>
+        </section>
 </main>
+
+</section>
 
 <footer>
     <span>Контакты</span>
