--- a/homework_2/index-dark.html
+++ b/homework_2/index-dark.html
@@ -6,130 +6,130 @@
     <link rel="stylesheet" type="text/css" href="styles-dark.css">
 </head>
 <body>
-    <header>
-        <h1>Интернет магазин "Не только красивое"</h1>
-    </header>
+<header>
+    <h1>Интернет магазин "Не только красивое"</h1>
+</header>
+
+<section class="main-container">
+
+    <aside>
+        <h2>Морская рыба</h2>
+        <ul>
+            <li><input type="checkbox">Акула</li>
+            <li><input type="checkbox">Окунь</li>
+            <li><input type="checkbox">Палтус</li>
+            <li><input type="checkbox">Треска</li>
+        </ul>
+
+        <h2>Пресноводная рыба</h2>
+        <ul>
+            <li><input type="checkbox">Белоглазка</li>
+            <li><input type="checkbox">Осётр</li>
+            <li><input type="checkbox">Речной угорь</li>
+            <li><input type="checkbox">Налим</li>
+        </ul>
+    </aside>
 
     <main>
-        <aside>
-                <h2>Морская рыба</h2>
-                <ul>
-                    <li><input type="checkbox">Акула</li>
-                    <li><input type="checkbox">Окунь</li>
-                    <li><input type="checkbox">Палтус</li>
-                    <li><input type="checkbox">Треска</li>
-                </ul>
+        <hgroup>
+            <h1>Рыбы на любой вкус</h1>
+            <p>Мы продаём рыбов, а не только показываем</p>
+        </hgroup>
 
-                <h2>Пресноводная рыба</h2>
-                <ul>
-                    <li><input type="checkbox">Белоглазка</li>
-                    <li><input type="checkbox">Осётр</li>
-                    <li><input type="checkbox">Речной угорь</li>
-                    <li><input type="checkbox">Налим</li>
-                </ul>
-        </aside>
+        <section class="fishes">
 
-        <section>
-
-            <hgroup>
-                <h1>Рыбы на любой вкус</h1>
-                <span>Мы продаём рыбов, а не только показываем</span>
-            </hgroup>
-
-            <article>
-
-                <div class="article__urls">
-                    <a href="#">Замороженные рыбы</a>
-                    <span>Мы заморозили рыбов для Вас</span>
-                </div>
-
-                <div class="article__urls">
-                    <a href="#">Живые рыбы</a>
-                    <span>На кухню или на разведение</span>
-                </div>
-
+            <article class="fishes__urls">
+                <a href="#">Замороженные рыбы</a>
+                <span>Мы заморозили рыбов для Вас</span>
             </article>
 
-            <div class="popular-items">
+            <article class="fishes__urls">
+                <a href="#">Живые рыбы</a>
+                <span>На кухню или на разведение</span>
+            </article>
+
+        </section>
+
+        <section class="popular-items">
 
             <h1>Популярные</h1>
 
-                    <div class="container">
-                        <div class="grid">
-                            <div class="img"></div>
+            <article class="popular-items__grid-container">
+                <article class="popular-items__grid">
+                    <picture class="popular-items__img"></picture>
 
-                            <div class="button_area">
-                            <a href="#">Палтус</a>
-                            <button class="button">Купить</button>
-                            </div>
+                    <article class="popular-items__button-area">
+                        <a href="#">Палтус</a>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                        </div>
+                </article>
 
-                        <div class="grid">
+                <article class="popular-items__grid">
 
-                            <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                            <div class="button_area">
-                                <a href="#">Сёмга</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <article class="popular-items__button-area">
+                        <a href="#">Сёмга</a>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                        </div>
+                </article>
 
-                        <div class="grid">
+                <article class="popular-items__grid">
 
-                            <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                            <div class="button_area">
-                                <a href="#">Сом</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <article class="popular-items__button-area">
+                        <a href="#">Сом</a>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                        </div>
+                </article>
 
-                        <div class="grid">
+                <article class="popular-items__grid">
 
-                            <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                            <div class="button_area">
-                                <a href="#">Сельдь</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <article class="popular-items__button-area">
+                        <a href="#">Сельдь</a>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                        </div>
+                </article>
 
-                        <div class="grid">
+                <article class="popular-items__grid">
 
-                            <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                            <div class="button_area">
-                                <a href="#">Мойва</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <article class="popular-items__button-area">
+                        <a href="#">Мойва</a>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                        </div>
+                </article>
 
-                        <div class="grid">
+                <article class="popular-items__grid">
 
-                            <div class="img"></div>
+                    <picture class="popular-items__img"></picture>
 
-                            <div class="button_area">
-                                <a href="#">Тунец</a>
-                                <button class="button">Купить</button>
-                            </div>
+                    <article class="popular-items__button-area">
+                        <a href="#">Тунец</a>
+                        <button class="popular-items__button">Купить</button>
+                    </article>
 
-                        </div>
+                </article>
 
-                    </div>
-            </div>
-
+            </article>
         </section>
     </main>
 
-    <footer>
-        <span>Контакты</span>
-        <span>© 2021 Рыбов О.А.</span>
-    </footer>
+</section>
+
+<footer>
+    <span>Контакты</span>
+    <span>© 2021 Рыбов О.А.</span>
+</footer>
 
 </body>
 </html>
